--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
         <!-- funfacts item -->
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <div class="text-center">
-            <h2 class="count text-white" data-count="2">0</h2>
+            <h2 class="count text-white" data-count="5">0</h2>
             <h5 class="text-white">EVENTS</h5>
           </div>
         </div>
@@ -239,7 +239,9 @@
                   <li class="list-inline-item"><a class="text-color" href="https://www.instagram.com/_vineethnair/"><i
                         class="ti-instagram"></i></a></li>
                   <li class="list-inline-item"><a class="text-color"
-                      href="https://www.linkedin.com/in/vineeth-nair-166260168/"><i class="ti-linkedin"></i></a></li>
+                      href="https://www.linkedin.com/in/vineeth-nair-1662
+                    
+                    168/"><i class="ti-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
